added complex polylines to map runners routes

--- a/app/views/runners/_markers.html.erb
+++ b/app/views/runners/_markers.html.erb
@@ -1,24 +1,15 @@
-<div class="markers">
-  <script>
-    $(function() {
+<script>
 
-      runner = new google.maps.Marker({
-        position: new google.maps.LatLng(43.010922699999995, -81.2654623),
-        map: findRunner.map, // notice how we pass it the map we made earlier? This is how it knows which map to put the marker on
-        icon : "http://labs.google.com/ridefinder/images/mm_20_purple.png",
-        title: 'Hello World!'
-      });
+$.ajax({
+  url: '/runners/1',
+  type: "put",
+  dataType: "script",
+  data: { 
+    latitude: "<%= Runner.find(1).latitude + 1 %>",
+    longitude: "<%= Runner.find(1).longitude + 1 %>",
+    _method: 'put'
+  }
+});
 
-      var reloadRunnerMarkers = setInterval(function(){
-
-       var lat = "<%= @runner.latitude%>";
-       var lng = "<%= @runner.longitude%>";
-       var newLatLng = new google.maps.LatLng(lat, lng);
-       runner.setPosition(newLatLng);
-
-      }, 10000);
-    });
-
-  </script>
-</div>
+</script>
 
