--- a/app/views/runners/_markers.html.erb
+++ b/app/views/runners/_markers.html.erb
@@ -5,8 +5,8 @@ $.ajax({
   type: "put",
   dataType: "script",
   data: { 
-    latitude: "<%= Runner.find(1).latitude + 1 %>",
-    longitude: "<%= Runner.find(1).longitude + 1 %>",
+    latitude: "<%= Runner.find(1).latitude %>",
+    longitude: "<%= Runner.find(1).longitude %>",
     _method: 'put'
   }
 });
