--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,49 @@
  *= require_self
  */
 
- .map {
-   width:100%;
-   height:100vh;
+ body{
+ 	margin: 10px 0;
+ 	font-family: 'Lato', sans-serif;
+ 	width: 100%;
+ }
+
+.map, .content{
+	display: inline-block;
+	height: 100vh;
+}
+
+.map{
+	width: 74%;
+
+}
+ .content{
+ 	width: 25%;
+ 	vertical-align: top;
+ 	text-align: center;
+
+ 	h2 {
+ 		background-color: #30ACD2;
+ 	 	color: #fff;
+ 	 	padding: 50px 20px;
+ 	 	margin: 0 2%;
+ 	}
+
+ 	h4{
+ 		margin: 15% 2%;
+ 		padding: 20px;
+ 		color: #fff;
+ 		text-align: left;
+
+ 		i{
+ 			margin-right: 10px;
+ 		}
+ 	}
+
+ 	.location{
+ 		background-color: #E96B56;
+ 	}
+
+ 	.select-runner{
+ 		background-color: #A2CFA5;
+ 	}
  }
